scroll fade in effect and minor dark mode menu color fixes

--- a/mystyle.css
+++ b/mystyle.css
@@ -953,7 +953,7 @@ body.dark a {
 
 .dark-mode header .menu {
     background-color: rgba(30, 30, 30, 0.97);
-    box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 1px 15px rgba(20, 20, 20, 0.569);
 }
 
 .dark-mode section.list ul li:before {
@@ -1200,15 +1200,13 @@ body.dark-mode .theme-toggle img {
 
 
 .scroll-reveal {
-    transition: transform 0.75s, opacity 0.75s;
-    transform: translateY(50px);
+    transform:translateY(75px);
     opacity: 0;
-  }
-  .scroll-reveal.active{
-      transform: translateY(0);
+}
+  /* .scroll-reveal {
       opacity: 1;
   }
-  
+   */
 .light-mode .visible-light, .dark-mode .visible-dark {
     display: block;
 }
